# Nyx-Monitor

./: .gitignore  Documentacion.md  GDD-Nyx-Monitor.md  README.md  estudio-monitor.md  index.html  package-lock.json  package.json  vite.config.ts  write-up.md
.github/workflows/: release-windows.yml
scripts/: tauri-wrapper.ps1
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  main.rs  models.rs  response_engine.rs
src-tauri/src/app_state/: alerts.rs  known_entities.rs  response.rs  snapshot.rs
src-tauri/src/detection/: mod.rs
src-tauri/src/monitoring/: events.rs  gpu_collector.rs  mod.rs  network_collector.rs  process_collector.rs  programs.rs  registry_collector.rs  startup.rs  trust.rs
src-tauri/src/storage/: mod.rs
src/components/: AlertsPanel.tsx  AppUsageHistoryTable.tsx  DataPanel.tsx  EventTimelineTable.tsx  HealthPanel.tsx  InstalledProgramsTable.tsx  MiniTabs.tsx  ProcessDetailsDialog.tsx  ProcessTable.tsx  ProcessTree.tsx  ResponsePanel.tsx  StartupProcessesTable.tsx  StatCard.tsx  ThreatsTable.tsx  TrustIndicator.tsx  UsageChart.tsx
src/hooks/: useMonitoringData.ts  useSearchQuery.ts
src/lib/: api.ts  externalLinks.ts  format.ts  search.ts
src/styles/: global.css
