[package]
name = "nyx-monitor"
version = "0.1.0"
description = "PC monitoring desktop app"
authors = ["Asier"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.31"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time", "process", "rt-multi-thread"] }
winreg = "0.52"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
